2011-03-31  Marco Caliari  <marco.caliari@univr.it>

	* sparse/spdiags.m: Treat empty vector (1x0 or 0x1) the same as diag().

2011-03-31  Rik  <octave@nomad.inbox5.com>

	* statistics/base/cor.m: Increase tolerance of %!tests using random
	data to guarantee passage.

2011-03-31  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, deprecated/cquad.m: Add deprecated entry for
	cquad() pointing to quadcc().

2011-03-31  Rik  <octave@nomad.inbox5.com>

	* statistics/base/cor.m: Fix operation with only single input
	(bug #32961)

2011-03-29  John W. Eaton  <jwe@octave.org>

	* special-matrix/wilkinson.m: Update test for 'wilkinson(1)' to reflect
	changes to diag().

2011-03-29  Michael Creel  <michael.creel@uab.es>

	* statistics/base/ols.m: Fix erroneous degrees of freedom when
	computing the covariance estimator (closes: bug #32892).

2011-03-28  Rik  <octave@nomad.inbox5.com>

	* linear-algebra/cross.m, plot/ishold.m, signal/fftfilt.m: Improve
	docstrings.

2011-03-26  Robert T. Short  <octave@phaselockedsystems.com.com>

	* signal/ifftshift.m: Add tests.

2011-03-26  Robert T. Short  <octave@phaselockedsystems.com.com>

	* signal/fftshift.m: Add tests.

2011-03-21  Rik  <octave@nomad.inbox5.com>

	* signal/ifftshift.m: Fix bug #32873, ifftshift fails.

2011-03-19  Rik  <octave@nomad.inbox5.com>

	* general/module.mk, statistics/base/module.mk: Move runlength.m
	to statistics/base directory.
	* statistics/base/runlength.m: Add input validation and tests.
	Improve docstring.

2011-03-19  Rik  <octave@nomad.inbox5.com>

	* statistics/models/logistic_regression.m: Do not split function
	declaration with line continuation.
	* statistics/models/private/logistic_regression_likelihood.m,
	statistics/models/private/logistic_regression_derivatives.m: Make
	helper functions private.
	* statistics/models/module.mk: Make helper functions private.

2011-03-19  Rik  <octave@nomad.inbox5.com>

	* plot/isocolors.m, plot/isonormals.m, plot/isosurface.m: Improve
	docstrings.
