@@ -1,8 +1,11 @@
 FCN_FILE_DIRS += pkg
 
+pkg_PRIVATE_FCN_FILES = \
+  pkg/private/get_forge_pkg.m
+
 pkg_FCN_FILES = \
   pkg/pkg.m \
-  pkg/get_forge_pkg.m
+  $(pkg_PRIVATE_FCN_FILES)
 
 FCN_FILES += $(pkg_FCN_FILES)
 
