@@ -1,3 +1,9 @@
+2011-03-31  Rik  <octave@nomad.inbox5.com>
+
+	* pkg/module.mk, pkg/pkg.m, pkg/private/get_forge_pkg.m: Add
+	documentation for '-forge' option (bug #32464).  Make get_forge_pkg
+	a private function.
+
 2011-03-31  Marco Caliari  <marco.caliari@univr.it>
 
 	* sparse/spdiags.m: Treat empty vector (1x0 or 0x1) the same as diag().
